moar JavaSerializerTest + spotless