@@ -5,8 +5,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -34,7 +36,9 @@ public class JavaSerializerTest {
   public void testPrimitiveObjectArray() throws Exception {
     Object[] values = {42, 1234567890123L, 3.3f, 3.14159, true, false};
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(values);
-    assertEquals("[\"[Ljava.lang.Object;\",[42,[\"java.lang.Long\",1234567890123],[\"java.lang.Float\",3.3],3.14159,true,false]]", serialized);
+    assertEquals(
+        "[\"[Ljava.lang.Object;\",[42,[\"java.lang.Long\",1234567890123],[\"java.lang.Float\",3.3],3.14159,true,false]]",
+        serialized);
     var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     // Should deserialize to Object[]
     assertEquals(Object[].class, deserialized.getClass());
@@ -104,6 +108,7 @@ public class JavaSerializerTest {
   @Test
   public void testNull() throws Exception {
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(null);
+    assertEquals("null", serialized);
     var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     assertNull(deserialized);
   }
@@ -119,12 +124,41 @@ public class JavaSerializerTest {
   }
 
   @Test
-  public void testList() throws Exception {
-    List<String> value = Arrays.asList("apple", "banana", "cherry");
+  public void testListOf() throws Exception {
+    List<String> value = List.of("apple", "banana", "cherry");
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
-    assertEquals("[\"java.util.Arrays$ArrayList\",[\"apple\",\"banana\",\"cherry\"]]", serialized);
+    assertEquals(
+        "[\"java.util.ImmutableCollections$ListN\",[\"apple\",\"banana\",\"cherry\"]]", serialized);
     var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     assertInstanceOf(List.class, deserialized);
+    assertEquals(value, deserialized);
+  }
+
+  @Test
+  public void testList() throws Exception {
+    List<String> value = new ArrayList<>();
+    value.add("apple");
+    value.add("banana");
+    value.add("cherry");
+    var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
+    assertEquals("[\"java.util.ArrayList\",[\"apple\",\"banana\",\"cherry\"]]", serialized);
+    var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
+    assertInstanceOf(List.class, deserialized);
+    assertEquals(value, deserialized);
+  }
+
+  @Test
+  public void testMapOf() throws Exception {
+    Map<String, Integer> value = Map.of("one", 1, "two", 2);
+    var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
+    // Map.of order is non deterministic
+    assertTrue(
+        serialized.contains("\"@class\":\"java.util.ImmutableCollections$MapN\""),
+        "Expected MapN @class in: " + serialized);
+    assertTrue(serialized.contains("\"one\":1"), serialized);
+    assertTrue(serialized.contains("\"two\":2"), serialized);
+    var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
+    assertInstanceOf(Map.class, deserialized);
     assertEquals(value, deserialized);
   }
 
@@ -144,7 +178,9 @@ public class JavaSerializerTest {
   public void testNestedPojo() throws Exception {
     Person value = new Person("Alice", 30, new Address("Seattle", "98101"));
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
-    assertEquals("{\"@class\":\"dev.dbos.transact.json.JavaSerializerTest$Person\",\"name\":\"Alice\",\"age\":30,\"address\":{\"@class\":\"dev.dbos.transact.json.JavaSerializerTest$Address\",\"city\":\"Seattle\",\"zip\":\"98101\"}}", serialized);
+    assertEquals(
+        "{\"@class\":\"dev.dbos.transact.json.JavaSerializerTest$Person\",\"name\":\"Alice\",\"age\":30,\"address\":{\"@class\":\"dev.dbos.transact.json.JavaSerializerTest$Address\",\"city\":\"Seattle\",\"zip\":\"98101\"}}",
+        serialized);
     var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     assertInstanceOf(Person.class, deserialized);
     assertEquals(value, deserialized);
@@ -164,7 +200,9 @@ public class JavaSerializerTest {
   public void testInstantInObjectArray() throws Exception {
     Object[] value = {Instant.parse("2024-01-01T00:00:00Z"), Instant.parse("2024-01-02T00:00:00Z")};
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
-    assertEquals("[\"[Ljava.lang.Object;\",[[\"java.time.Instant\",\"2024-01-01T00:00:00Z\"],[\"java.time.Instant\",\"2024-01-02T00:00:00Z\"]]]", serialized);
+    assertEquals(
+        "[\"[Ljava.lang.Object;\",[[\"java.time.Instant\",\"2024-01-01T00:00:00Z\"],[\"java.time.Instant\",\"2024-01-02T00:00:00Z\"]]]",
+        serialized);
     var deserialized = (Object[]) DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     assertEquals(2, deserialized.length);
     assertInstanceOf(Instant.class, deserialized[0]);
@@ -180,7 +218,9 @@ public class JavaSerializerTest {
     m1.put("age", 30);
     List<Map<String, Object>> value = List.of(m1);
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
-    assertEquals("[\"java.util.ImmutableCollections$List12\",[{\"@class\":\"java.util.HashMap\",\"name\":\"Alice\",\"age\":30}]]", serialized);
+    assertEquals(
+        "[\"java.util.ImmutableCollections$List12\",[{\"@class\":\"java.util.HashMap\",\"name\":\"Alice\",\"age\":30}]]",
+        serialized);
     var deserialized = DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     assertInstanceOf(List.class, deserialized);
     assertEquals(value, deserialized);
@@ -190,7 +230,9 @@ public class JavaSerializerTest {
   public void testMixedObjectArrayWithList() throws Exception {
     Object[] value = {"abc", 123, true, Arrays.asList("x", "y")};
     var serialized = DBOSJavaSerializer.INSTANCE.serialize(value);
-    assertEquals("[\"[Ljava.lang.Object;\",[\"abc\",123,true,[\"java.util.Arrays$ArrayList\",[\"x\",\"y\"]]]]", serialized);
+    assertEquals(
+        "[\"[Ljava.lang.Object;\",[\"abc\",123,true,[\"java.util.Arrays$ArrayList\",[\"x\",\"y\"]]]]",
+        serialized);
     var deserialized = (Object[]) DBOSJavaSerializer.INSTANCE.deserialize(serialized);
     assertArrayEquals(value, deserialized);
   }
